# emg-c3d-analyzer

./: .dev_pids  .dev_state  .dockerignore  .env.coolify.example  .env.example  .env.production  .env.redis.example  .gitignore  .gitlab-ci.yml  .huskyrc  .replit  .vercelignore  CLAUDE.md  DATABASE_IMPROVEMENT_PROPOSAL.md  DEPLOYMENT_COOLIFY.md  EXPORT_FINAL_ENHANCEMENT_MD.md  FIXING_VERCEL.md  KNOWLEDGE_TRANSFER_IDEAS.md  LOGGING_SUCCESS.md  MCP_SETUP_GUIDE.md  PLAN-PATIENTS-LIST.md  PLAN_SIMPLIFY_SESSION_SETTINGS.md  PROMPT_EXPORT_CSV  README.md  SIMPLIFIED_NOTES_IMPLEMENTATION.md  SINGLE_SOURCE_OF_TRUTH_IMPLEMENTATION.md  SUPABASE_SETUP_GUIDE.md  TODO-20250905-SCHEMA-ALIGNMENT.md  TODO-ADD-NOTES-05-09-2025.md  VITE_MIGRATION_BASELINE.md  c3d_api.py  c3d_processor.py  comprehensive_test_report_2025-01-09.md  docker-compose.coolify.yml  docker-compose.dev.yml  docker-compose.redis.yml  docker-compose.yml  main.py  models.py  package-lock.json  (+31 more)
.claude/agents/: backend-typescript-architect.md  biomedical-emg-engineer.md  python-backend-engineer.md  senior-code-reviewer.md  ui-engineer.md
.github/workflows/: TODO-26-08-09-SETUP-BRANCH-PROTECTION.md  ci.yml  deploy-docs.yml  deploy-production.yml
.serena/: project.yml
archived/completed-todos/: authentication-issues-resolved-july-30.md
backend/: .dev_pids  .dockerignore  .env.example  2025-08-29-this-session-is-being-continued-from-a-previous-co.txt  CLAUDE.md  CLEANUP_REPORT.md  README.md  api.py  cleanup_report_2025-09-10.md  config.py  create_c3d_technical_data_table.sql  create_table.py  emg_analysis.py  example_export_usage.py  export_utils.py  fix_failing_tests.py  main.py  models.py  plotting.py  processor.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_rls_test_production.sh  run_tests_with_env.sh  startup.py  test_adherence_fix.py  test_coverage_improvement_plan.md  test_rigorous_pipeline.py  test_therapist_resolution.py  test_three_channel_integration.py  test_webhook_fix.py  therapy_session_processor_fixes.patch
backend/api/: api.py  main.py  rbac.py  webhooks.py
backend/application/: __init__.py  mvc_service.py  processor_service.py
backend/core/: __init__.py  config.py  constants.py
backend/database/: supabase_client.py
backend/docs/: ARCHITECTURE_REVIEW.md  DATABASE_FUNCTIONS_AND_RLS.md  session_identifier_schema.md
backend/domain/: __init__.py  analysis.py
backend/emg/: __init__.py  emg_analysis.py  signal_processing.py
backend/fixes/: webhook_processing_fixes.py
backend/infrastructure/: __init__.py  exporting.py  file_io.py  storage.py
backend/interfaces/: __init__.py  api.py
backend/migrations/: add_performance_enhancements.sql  add_therapist_patient_scoring_config.sql
backend/models/: __init__.py  models.py
backend/scripts/: README.md  __init__.py  cleanup_sessions.py  cleanup_test_data.py  cleanup_test_data.sql  populate_realistic_sessions.py  populate_sessions.py  test_mvc_endpoint.py  validate_jsonb_migration.py  validate_table_population.py
backend/services/: __init__.py  c3d_processor.py  c3d_reader.py  cache_service.py  enhanced_webhook_service.py  export_service.py  metadata_service.py  performance_scoring_service.py  therapy_session_processor.py  unified_threshold_service.py  webhook_security.py  webhook_service.py
backend/signal/: __init__.py  processing.py
backend/tests/: CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  README.md  __init__.py  (+21 more)
docker/: .env.example  README.md  test-frontend-build.sh
docs/: AUTHENTICATION_SYSTEM.md  GITHUB_PAGES_SETUP.md  JSONB_MIGRATION_DEPLOYMENT.md  README.md  SCORING_WEIGHTS_INTEGRATION.md  analytics_cache_analysis.md  api.md  architecture-ddd.md  automated-c3d-processing-workflow.md  component_architecture.md  console-log-cleanup-summary.md  data_compatibility.md  data_flows.md  database-migration-validation-20250904.md  database-migrations-applied.md  database_optimization_completion_report.md  database_optimization_final_report.md  database_schema_final_report.md  database_schema_validation_report.md  db_schema.md  deployment.md  docker-deployment-production.md  docker-development-setup.md  docker-infrastructure-complete.md  docker-known-issues.md  docker-setup.md  enhanced_schema_implementation_report.md  manual_testing_webhooks.md  migration_006_validation_report.md  patient-id-resolution.md  redis_cache_implementation.md  redis_cache_simple.md  signal-processing-pipeline.md  signal-processing.md  supabase_client.md  troubleshooting.md  webhook_security_rls.md  webhook_system.md
docusaurus/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tasks.md
frontend/: .dev_pids  .env.example  .eslintrc.js  .vercelignore  CLAUDE.md  CLEANUP_REPORT.md  Dockerfile.dev  OBSOLETE_FILES_BACKUP.md  QUALITY_WORKFLOW.md  README.md  auth_architecture_analysis.md  index.html  nginx.conf  package-lock.json  package.json  performance-optimization-report.md  tailwind.config.js  test-analysis-workflow.md  test-logger.js  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
memory-bank/: EXPORT_API_ENHANCEMENT_PLAN.md  RBACarchitecture.Md  README.md  activeContext.md  contraction-visualization-technical-documentation.md  documentation-cleanup-summary.md  kanban.mermaid  metricsDefinitions.md  productContext.md  progress.md  projectbrief.md  role-based-system-action-plan.md  systemPatterns.md  techContext.md  todo-2025-01-31-urgent-schema-alignment-analysis.md  todo-activated-channels-research.md  todo.md  working-context-aug-8-2025.md
migrations/: 002_create_analysis_cache.sql  021_cleanup_therapy_sessions_table.sql  create_session_settings_table.sql
nginx/: dev.conf  prod.conf
scripts/: README.md  fix-cors-staging.sh  package-lock.json  upload-samples.js  validate-docker-build.sh
supabase/: MIGRATION_CLEANUP_PLAN.md  README.md  TODO-26-08-25-SYNC-CLOUD-SUPABASE.md  TODO-27-08-25-simplify-schema.md  config.toml  export-remote-schema-02-09-2025.sql  reorganize_migrations.sh  rollback_20250904_emg_statistics_clinical_groups.sql  seed.sql
tests/: validate_metrics_definitions_compliance.py
(+942 files in other folders)
