[tool.poetry]
name = "emg-c3d-analyzer"
version = "0.1.0"
description = "Analyzes EMG data from C3D files from the GHOSTLY platform."
authors = ["pwablo <hello@pwablo.be>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pytube = "^15.0.0"
seaborn = "^0.13.2"
ezc3d = "^1.5.18"
matplotlib = "^3.10.3"
numpy = "^2.2.5"
pandas = "^2.2.3"
scipy = "^1.15.3"
fastapi = "^0.115.12"
python-multipart = "^0.0.9"
pydantic = "^2.11.4"
uvicorn = "^0.34.2"
requests = "^2.32.3"
supabase = "^2.0.0"
pytest-asyncio = "^0.23.0"
python-dotenv = "^1.0.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"